Task#3 feat(auth): 集成 OAuth2 Authorization Server + PKCE 登录 + Docker Compose 编排
## 新增功能

### OAuth2 Authorization Server
- 集成 Spring Authorization Server 7.x，支持 RS256 JWK 签名
- 实现 OAuth2 Authorization Code + PKCE 授权流程（SPA 公共客户端）
- OAuth2 客户端管理：CRUD + 密钥重置（BCrypt 加密存储）
- 新增 OAuth2RegisteredClient 实体、OAuth2ClientMapper、OAuth2ClientVO 等数据层
- 新增 OAuth2ClientController（6 个 REST 端点）
- 新增 OAuth2ClientService / OAuth2ClientServiceImpl（create/list/get/update/delete/resetSecret）
- 新增 OmniUserDetails 自定义 UserDetails，携带 tenantId 多租户信息

### 前端 OAuth2 支持
- 新增 PKCE 工具类（src/utils/pkce.ts）：code_verifier/code_challenge 生成 + sessionStorage 管理
- 新增 OAuth2 客户端管理页面（src/views/oauth2-client/index.vue + form.vue）
- 新增授权回调页面（src/views/callback/index.vue）：处理 authorization_code 换 token
- 新增 oauth2-client.ts API 层（6 个函数）
- 新增 .env.development 环境变量配置

### Docker Compose 基础设施
- 创建 docker-compose.yml：MySQL 8.4 + Redis 7.4 + Nacos v3.1.1 + Sentinel 1.8.8
- MySQL 健康检查 + scripts/sql/init-all.sql 自动初始化（13 表 DDL + 26 权限种子数据）
- 命名卷持久化（mysql-data、redis-data）

## 补充说明资料

### 文档更新
- docs/core-flows.md: 新增 Flow 2（OAuth2 PKCE 完整流程，含 Mermaid 时序图 + 组件表）
- docs/core-flows.md: Flow 1 新增 Mermaid 时序图（ASCII 版本折叠到 <details>）
- docs/architecture.md: 新增 Database Schema 章节（13 表结构 + Mermaid ER 图）
- docs/architecture.md: 新增 Infrastructure 章节（Docker Compose 编排说明）
- docs/architecture.md: External Dependencies 表扩展（+MySQL/Redis）
- AGENTS.md: 新增 Auth 服务入口点/启动命令、Docker Compose 首选方式、中文注释硬约束
- README.md/en.md/jp.md: 项目结构树(+omni-auth/scripts)、架构图(+Auth/MySQL/Redis)、
  docker compose 快速开始、端口表、模块说明

### 数据库脚本
- 创建 scripts/sql/init-all.sql（权威初始化脚本：13 表 DDL + 种子数据 + 角色映射）

## 架构调整
- 移除 omni-business 模块（暂未实现）
- Auth 服务端口 8100，Gateway 端口 8102